[project]
name = "dk_results"
version = "0.1.0"
description = ""
# NOTE: rookiepy has no wheels for Python >=3.13; keep <3.13 to avoid source build failures.
requires-python = ">=3.12,<3.13"

dependencies = [
    "google-api-python-client",
    "requests",
    "pulp",
    "rookiepy",
    "pyyaml",
    "dotenv",
    "discord",
    "dfs-common"
]

[tool.setuptools.packages.find]
include = ["bot", "classes"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov"
]
lint = [
    "ruff"
]
type = [
    "ty"
]

[tool.pip]
allow-prereleases = true

[tool.uv]
default-groups = "all"

[tool.uv.sources]
dfs-common = { path = "../dfs_common" }
